--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nexor Academy | Comunidade IA & Automações</title>
     <meta name="description" content="Nexor Academy - Aprenda IA, automações e n8n com os melhores especialistas. Transforme seu negócio com tecnologia de ponta.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,11 +58,11 @@
                 <div class="hero-stats">
                     <div class="stat">
                         <div class="stat-avatars">
-                            <div class="stat-avatar">🚀</div>
-                            <div class="stat-avatar">⚡</div>
-                            <div class="stat-avatar">🎯</div>
-                            <div class="stat-avatar">💡</div>
-                            <div class="stat-avatar">🔥</div>
+                            <div class="stat-avatar"><img src="images/cliente1.jpg" alt="Cliente 1"></div>
+                            <div class="stat-avatar"><img src="images/cliente2.jpg" alt="Cliente 2"></div>
+                            <div class="stat-avatar"><img src="images/cliente3.jpg" alt="Cliente 3"></div>
+                            <div class="stat-avatar"><img src="images/cliente4.jpg" alt="Cliente 4"></div>
+                            <div class="stat-avatar"><img src="images/cliente5.jpg" alt="Cliente 5"></div>
                         </div>
                         <div class="stat-info">
                             <div class="stat-number">+500 MEMBROS</div>
@@ -373,12 +373,12 @@
                 </p>
                 <div class="pricing">
                     <div class="price-tag">
-                        <span class="price-old-highlight">De R$ 197,00</span>
+                        <span class="price-old-highlight">De R$ 497,00</span>
                         <div class="price-installment-wrapper">
                             <span class="price-installment-times">12x de</span>
-                            <span class="price-installment">R$ 6,93</span>
+                            <span class="price-installment">R$ 10,03</span>
                         </div>
-                        <span class="price-cash">ou R$ 67,00 à vista</span>
+                        <span class="price-cash">ou R$ 97,00 à vista</span>
                     </div>
                 </div>
                 <div class="cta-benefits">
