--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="cta-benefit">✓ Certificados inclusos</div>
                 </div>
 
-                <a href="https://pay.kiwify.com.br/LFjFBNo?utm_source=organic&utm_campaign&utm_medium&utm_content&utm_term" class="final-cta" target="_blank" rel="noopener noreferrer">
+                <a href="https://pay.kiwify.com.br/620N6n0" class="final-cta" target="_blank" rel="noopener noreferrer">
                     <span>⚡ QUERO ENTRAR NA COMUNIDADE AGORA ⚡</span>
                     <svg class="arrow" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
